# rget

./: Cargo.toml
src/: file_list.rs  ip.rs  main.rs
templates/: list.html
