[package]
name = "rget"
version = "0.1.0"
authors = ["lwxntm <canxuetian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
tera = "1"
actix-http = "1"
actix-web = "2"
actix-rt = "1"
serde="*"
actix-files = "*"
download_rs = {version="0.2.0",features=["async_download"]}
filetime = "0.2"
chrono="0.4.11"